# code-covered

./: .pre-commit-config.yaml  CODE_COVERED_TEST_COVERAGE_REQUIREMENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  cli.py  mcp.yaml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
analyzer/: __init__.py  coverage_gaps.py
mcp_code_covered/: __init__.py  manifest.json  tool.py
mcp_code_covered/schemas/: code_covered.gaps.request.schema.v0.1.json  code_covered.gaps.response.schema.v0.1.json
tests/: test_cli.py  test_coverage_gaps.py  test_mcp_tool.py
tests/fixtures/: sample_coverage.json  sample_validator.py
tests/fixtures/mcp/: golden_request.json  golden_source.py
