[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-covered"
version = "0.5.0"
description = "Find coverage gaps and suggest what tests to write"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com"}
]
keywords = ["coverage", "testing", "pytest", "test-generation", "code-coverage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

# Zero runtime dependencies - just stdlib
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
# MCP adapter has no additional runtime deps beyond the engine
mcp = []

[project.urls]
Homepage = "https://github.com/mcp-tool-shop/code-covered"
Repository = "https://github.com/mcp-tool-shop/code-covered"
Issues = "https://github.com/mcp-tool-shop/code-covered/issues"

[project.scripts]
code-covered = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["analyzer*", "mcp_code_covered*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]

[tool.coverage.run]
source = ["analyzer", "mcp_code_covered"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
